Resolved remaining code smelll issues