@@ -48,6 +48,7 @@ class NotifyCsvWriterComponentImplTest {
         .id("notificationId")
         .createdAt("createdTimestamp")
         .build();
+    private static final List<CsvNotificationOutput> TEST_OUTPUT_LIST = Collections.singletonList(TEST_OUTPUT_DATA);
 
     private static final String EXPECTED_HEADER_OUTPUT = "\"extraction_date\",\"id\",\"service\",\"reference\","
         + "\"email_address\",\"phone_number\",\"line_1\",\"line_2\",\"line_3\",\"line_4\",\"line_5\",\"line_6\","
@@ -100,7 +101,7 @@ class NotifyCsvWriterComponentImplTest {
 
     @Test
     void givenValidWriter_whenWriteBeans_thenCsvFileIsCreated() throws Exception {
-        underTest.writeBeansWithWriter(writer, Collections.singletonList(TEST_OUTPUT_DATA));
+        underTest.writeBeansWithWriter(writer, TEST_OUTPUT_LIST);
 
         verify(writer).write(getExpectedDataString() + "\n");
         verify(writer, times(1)).flush();
@@ -120,7 +121,7 @@ class NotifyCsvWriterComponentImplTest {
     void givenExceptionOnClose_whenWriteBeans_thenThrowParserException() throws Exception {
         doThrow(new IOException("Broken close")).when(csvWriter).close();
 
-        assertThrows(ParserException.class, () -> underTest.writeBeansWithWriter(writer, List.of(TEST_OUTPUT_DATA)));
+        assertThrows(ParserException.class, () -> underTest.writeBeansWithWriter(writer, TEST_OUTPUT_LIST));
 
         verify(writer, never()).flush();
     }
@@ -129,7 +130,7 @@ class NotifyCsvWriterComponentImplTest {
     void givenExceptionOnClose_whenWriteBeanToCsv_thenThrowParserException() throws Exception {
         doThrow(new IOException("Broken close")).when(bufferedWriter).close();
 
-        assertThrows(ParserException.class, () -> underTest.writeBeansAsCsvFile(uniqueFileName, List.of(TEST_OUTPUT_DATA)));
+        assertThrows(ParserException.class, () -> underTest.writeBeansAsCsvFile(uniqueFileName, TEST_OUTPUT_LIST));
 
         // One flush for write header and one flush for write line. Final flush for writer close not called due to exception.
         verify(writer, times(2)).flush();
@@ -151,7 +152,7 @@ class NotifyCsvWriterComponentImplTest {
         try (CSVWriterThrowExceptionStub csvWriterThrowsException = spy(new CSVWriterThrowExceptionStub(writer))) {
             when(writerWrapper.getCsvWriter(any())).thenReturn(csvWriterThrowsException);
 
-            assertThrows(RuntimeException.class, () -> underTest.writeBeansWithWriter(writer, List.of(TEST_OUTPUT_DATA)));
+            assertThrows(RuntimeException.class, () -> underTest.writeBeansWithWriter(writer, TEST_OUTPUT_LIST));
 
             verify(csvWriterThrowsException, times(1)).close();
         }
@@ -162,7 +163,7 @@ class NotifyCsvWriterComponentImplTest {
         try (CSVWriterThrowExceptionStub csvWriterThrowsException = spy(new CSVWriterThrowExceptionStub(writer))) {
             when(writerWrapper.getCsvWriter(any())).thenReturn(csvWriterThrowsException);
 
-            assertThrows(RuntimeException.class, () -> underTest.writeBeansAsCsvFile(uniqueFileName, List.of(TEST_OUTPUT_DATA)));
+            assertThrows(RuntimeException.class, () -> underTest.writeBeansAsCsvFile(uniqueFileName, TEST_OUTPUT_LIST));
 
             verify(csvWriterThrowsException, times(1)).close();
         }
@@ -173,7 +174,7 @@ class NotifyCsvWriterComponentImplTest {
         when(writerWrapper.getCsvWriter(any())).thenCallRealMethod();
         when(writerWrapper.getBufferedWriter(any(Path.class))).thenCallRealMethod();
 
-        underTest.writeBeansAsCsvFile(uniqueFileName, Collections.singletonList(TEST_OUTPUT_DATA));
+        underTest.writeBeansAsCsvFile(uniqueFileName, TEST_OUTPUT_LIST);
 
         try (InputStream fileInputStream = Files.newInputStream(Paths.get(uniqueFileName))) {
 
@@ -194,7 +195,8 @@ class NotifyCsvWriterComponentImplTest {
         when(writerWrapper.getCsvWriter(any())).thenCallRealMethod();
         when(writerWrapper.getBufferedWriter(any(Path.class))).thenCallRealMethod();
 
-        assertThrows(ParserException.class, () -> underTest.writeBeansAsCsvFile("/", List.of()));
+        List<CsvNotificationOutput> emptyList = Collections.emptyList();
+        assertThrows(ParserException.class, () -> underTest.writeBeansAsCsvFile("/", emptyList));
     }
 
     private String wrapStringInQuotes(String inputString) {
